--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,139 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
+body{
+  background:linear-gradient( #68EACC 0%, #487BE8 100% ) no-repeat;
+  width: 100%;
+  height: 100vh;
+  font-size: 20px;
+}
+
+.container{
+  width: 350px;
+  height: 420px;
+  margin: 180px auto;
+  background-color: #fff;
+  border-radius: 10px;
+}
+
+.container .h2 {
+  font-weight: 800;
+  padding: 20px 0 15px 5px;
+}
+
+.container .add-tasks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 45px;
+  width: 95%;
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+
+.container .add-tasks .form-control {
+  width: 85%;
+}
+
+.container .add-tasks .btn1 {
+  padding: 0;
+  border: none;
+  margin-left: 5px;
+  height: 45px;
+  color: #8E49E8;
+  border-radius: 10px;
+  background-color: #fff;
+  opacity: 0.6;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container .add-tasks .active {
+  opacity: 1;
+  pointer-events: auto;
+  padding: 0;
+  border: none;
+  margin-left: 5px;
+  height: 45px;
+  color: #8E49E8;
+  border-radius: 10px;
+  background-color: #fff;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container .tasks {
+  width: 95%;
+  margin-left: 10px;
+  max-height: 210px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  position: relative;
+}
+
+.container .tasks .task {
+  background-color: #d0d3d6;
+  padding-left: 12px;
+  height: 43px;
+  margin-bottom: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* li{
+  list-style: none;
+} */
+
+.container .tasks .task:hover .btn-danger {
+  right: 0px;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container .tasks .task  {
+  height: 43px;
+  line-height: 43px;
+  width: 100%;
+}
+
+.container .tasks .task .btn-danger {
+  height: 43px;
+  width: 43px;
+  position: absolute;
+  right: -100px;
+  text-align: center;
+  border-radius: 5px;
+  line-height: 43px;
+  cursor: pointer;
+}
+
+.container .show-all-tasks {
+  margin: 10px 0 0 10px;
+  width: 95%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 45px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.container .show-all-tasks .h5 {
+  font-size: 14px;
+  font-weight: 900;
+  line-height: 45px;
+}
+
+.container .show-all-tasks .btn-warning {
+  height: 40px;
+  color: red;
+  font-weight: 500;
+}
+
+.container .show-all-tasks .btn-warning:hover {
+  background-color: red;
+  color: #fff;
 }
